--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             clifford: '#da373d',
             'btn-primary':'#ABEF5F',
             'btn-lite':'#ABEF5F80',
+            'back':'rgb(30, 30, 30)',
           }
         }
       }
@@ -128,6 +129,59 @@
 
      <!-- Main section -->
       <main class=" md:container mx-auto ">
+                <!-- We design  section   -->
+                <section class="w-full bg-stone-100  ">
+                    <!-- We design thoughtful, liveable spaces div -->
+                     <div class="md:container mx-auto flex flex-col lg:flex-row py-24 mt-28 gap-9  ">
+                        <!-- div 1  for Text-->
+                         <div class=" lg:w-1/2 flex flex-col mx-8 ">
+                            <!--  btn and  h1 and p  -->
+                              <div class="mb-6 text-center ">
+                                <!-- button -->
+                                <div class="bg-white rounded-[24px] py-2 px-4  inline-block  ">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                    <button>About Us</button>
+                                </div>
+                                <h1 class="font-extrabold text-4xl mb-5">We design thoughtful,<br> liveable spaces</h1>
+                                <p class="font-medium">The barn house captivates with its blend of rustic charm <br> and 
+                                    modern sophistication, featuring weathered wood, sleek metal accents.  </p>
+                              </div>
+                              <!-- Card div -->
+                               <div>
+                                <!-- card 1 -->
+                                 <div class="flex bg-white mb-6 p-6 rounded-2xl gap-6">
+                                    <!-- card image  -->
+                                     <div>
+                                        <img class=""  src="assets/commercial.png" alt="">
+                                     </div>
+                                     <!-- card text -->
+                                      <div>
+                                        <h1 class="text-sm font-extrabold">Commercial</h1>
+                                        <p>The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                                      </div>
+                                 </div>
+                                 <!-- card 2 -->
+                                 <div class=" flex bg-white p-6 rounded-2xl gap-6">
+                                    <!-- card image  -->
+                                     <div>
+                                        <img class="grid items-center " src="assets/residential.png" alt="">
+                                     </div>
+                                     <!-- card text -->
+                                      <div class=" items-center ">
+                                        <h1 class="text-sm font-extrabold">Residential</h1>
+                                        <p>The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                                      </div>
+                                 </div>
+                               </div>
+                         </div>
+                        <!-- div 2 for image -->
+                         <div class="lg:w-1/2">
+                            <img class="m-auto" src="assets/Rectangle.png" alt="">
+                         </div>
+                     </div>
+                  </section>
+
+                
       </main>
 
 
