--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <!-- main secion -->
         <section class=" md:container mx-auto">
               <!-- vector image -->
-               <div class="hidden lg:inline-block relative left-[1pxz] top-[105px] boreder py-5 outline-dashed ">
+               <div class="hidden lg:inline-block relative left-[-30px] top-[90px] ">
                 <img src="assets/Vector.png" alt="">
                </div>
                 <!-- We design  section   -->
